--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <meta name="description" content="">
     <meta name="author" content="Maria D. Campbell">
     <title>React Gallery</title>
+    <link rel="shortcut icon" href="favicon.ico">
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
-<link rel="shortcut icon" href="favicon.ico"><link href="style/style-8896df6a.css" rel="stylesheet"></head>
+<link href="styles/main.4fb2a49e10d14a1e2f8b.css" rel="stylesheet"></head>
 
 <body>
     <div id="root"></div>
-<script type="text/javascript" src="scripts/runtime-75eda106.js"></script><script type="text/javascript" src="scripts/vendor-77a860d5.js"></script><script type="text/javascript" src="scripts/bundle-e66bd0ae.js"></script></body>
+<script type="text/javascript" src="scripts/vendors~main.53460bfc82a7f9e20a42.chunk.js"></script><script type="text/javascript" src="scripts/main.94bd4cb8988dec7a5b48.chunk.js"></script></body>
 
 </html>
